tests/rt/neg/core/serialize03.trp
save ("serialize03", exit)